fix: Now will properly update a car when provided its id
